feat(reports): component fiscal date limit
This commit introduces an optional flag on the `bhDateInterval`
component that is used on many reports. It will request the starting
date of the first fiscal year from the server and ensure the date input
cannot select a date before this.

--- a/client/src/modules/reports/generate/account_report/account_report.html
+++ b/client/src/modules/reports/generate/account_report/account_report.html
@@ -40,6 +40,7 @@
               date-from="ReportConfigCtrl.reportDetails.dateFrom"
               date-to="ReportConfigCtrl.reportDetails.dateTo"
               required="true"
+              limit-min-fiscal
               validation-trigger="ConfigForm.$submitted">
             </bh-date-interval>
 
