--- a/client/src/modules/reports/generate/cashflowByService/cashflowByService.html
+++ b/client/src/modules/reports/generate/cashflowByService/cashflowByService.html
@@ -33,6 +33,7 @@
             <bh-date-interval
               date-from="ReportConfigCtrl.reportDetails.dateFrom"
               date-to="ReportConfigCtrl.reportDetails.dateTo"
+              limit-min-fiscal
               required="true">
             </bh-date-interval>
 
