--- a/client/src/modules/reports/generate/clients_report/clients_report.html
+++ b/client/src/modules/reports/generate/clients_report/clients_report.html
@@ -34,7 +34,8 @@
             <bh-date-interval
               ng-if="!ReportConfigCtrl.reportDetails.simplePreview"
               date-from="ReportConfigCtrl.reportDetails.dateFrom"
-              date-to="ReportConfigCtrl.reportDetails.dateTo">
+              date-to="ReportConfigCtrl.reportDetails.dateTo"
+              limit-min-fiscal>
             </bh-date-interval>
 
             <!-- detail the previous year flag  -->
