--- a/client/src/modules/reports/generate/cashflow/cashflow.html
+++ b/client/src/modules/reports/generate/cashflow/cashflow.html
@@ -26,6 +26,7 @@
             <bh-date-interval
               date-from="ReportConfigCtrl.reportDetails.dateFrom"
               date-to="ReportConfigCtrl.reportDetails.dateTo"
+              limit-min-fiscal
               required="true">
             </bh-date-interval>
 
