chore(reports): apply limit to bh-date-editor
This commit applied the `limit-min-fiscal` flag the `bh-date-editor`
component. It also updates reports that use this component to ensure
they cannot be submitted for before the enterprise fiscal activity.

--- a/client/src/modules/reports/generate/balance_sheet_report/balance_sheet_report.html
+++ b/client/src/modules/reports/generate/balance_sheet_report/balance_sheet_report.html
@@ -26,7 +26,8 @@
             <!-- choose date until  -->
             <bh-date-editor
               date-value="ReportConfigCtrl.reportDetails.date"
-              on-change="ReportConfigCtrl.onDateChange(date)">
+              on-change="ReportConfigCtrl.onDateChange(date)"
+              limit-min-fiscal>
             </bh-date-editor>
 
             <!--display also revenue and expense-->
