--- a/client/src/modules/reports/generate/inventory_file/inventory_file.html
+++ b/client/src/modules/reports/generate/inventory_file/inventory_file.html
@@ -45,6 +45,7 @@
           <!-- choose date until  -->
           <bh-date-editor
             label="FORM.LABELS.UNTIL_DATE"
+            limit-min-fiscal
             date-value="ReportConfigCtrl.dateTo"
             on-change="ReportConfigCtrl.onDateChange(date)">
           </bh-date-editor>
